--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST = dbhost
-DB_USER= dbusername
-DB_PASS = dbpassword
-DB_DATABASE = dbName
+DB_HOST = us-cdbr-iron-east-05.cleardb.net
+DB_USER= b8ea3e7fbe048f
+DB_PASS = 7237c216
+DB_DATABASE = heroku_46471de35bf643d
 DB_WAITFORCONNECTION = true
-COOKIE_SECRET = randomPassword
+COOKIE_SECRET = HdkdhPb32
